[project]
name = "django-toon"
version = "0.1.2"
description = "django-toon is a package for sending data in the Toon format"
requires-python = ">=3.10"
authors = [{name="Ehsan Amiri", email="ehsan.amiri.prog@email.com"}]
dependencies = [
    "python-toon>=0.1.3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.urls]
Homepage = "https://github.com/ehs22n/django-toon"
Repository = "https://github.com/ehs22n/django-toon"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

